[metadata]
name = hello_gh_actions
author = Sören Wegener
author-email = soerface@flipdot.org
summary = This package demonstrates building and publishing Python Packages with GitHubs infrastructure
description-file = README.md
description-content-type = text/markdown

[files]
packages =
    hello_gh_actions