[metadata]
name = hetzner_fix_report
author = Felix
author-email = 10831300+flxai@users.noreply.github.com
summary = This package demonstrates building and publishing Python Packages with GitHubs infrastructure
description-file = README.md
description-content-type = text/markdown

[files]
packages =
    hetzner_fix_report